RESOLVED FIXED167691
AXObjectCache is missing two functions at link time when !HAVE(ACCESSIBILITY)
https://bugs.webkit.org/show_bug.cgi?id=167691
Summary AXObjectCache is missing two functions at link time when !HAVE(ACCESSIBILITY)
Timothy Hatcher
Reported 2017-02-01 09:02:30 PST
AXObjectCache::recomputeDeferredIsIgnored and AXObjectCache::performDeferredIsIgnoredChange need empty stubs to allow WebCore to link.
Attachments
Patch (1.97 KB, patch)
2017-02-01 09:03 PST, Timothy Hatcher
no flags
Timothy Hatcher
Comment 1 2017-02-01 09:03:47 PST
WebKit Commit Bot
Comment 2 2017-02-01 09:47:38 PST
Comment on attachment 300328 [details] Patch Clearing flags on attachment: 300328 Committed r211488: <http://trac.webkit.org/changeset/211488>
WebKit Commit Bot
Comment 3 2017-02-01 09:47:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.