AXObjectCache is missing two functions at link time when !HAVE(ACCESSIBILITY) https://bugs.webkit.org/show_bug.cgi?id=167691

Reviewed by Chris Fleizach.

* accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::recomputeDeferredIsIgnored): Added empty stub.
(WebCore::AXObjectCache::performDeferredIsIgnoredChange): Added empty stub.


Canonical link: https://commits.webkit.org/184727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@211488 268f45cc-cd09-0410-ab3c-d52691b4dbfc